--- a/personality-test/src/style/App.css
+++ b/personality-test/src/style/App.css
@@ -26,6 +26,13 @@ h1, h2, h3, h4, h5, h6 {
   color: #e96132;
 }
 
+a {
+  color: white;
+}
+a:hover {
+  color: white;
+}
+
 ul {
   list-style: none;
   margin: 0;
@@ -41,7 +48,7 @@ ul li {
 
 .ui.inverted.menu {
   background-size: contain;
-  background: url(./assets/bg.png);
+  background: url(./../assets/bg.png);
 }
 
 .ui.segment.pushable {
@@ -59,7 +66,7 @@ main {
 main::after {
   content: "";
   background-size: contain;
-  background: url(./assets/test-bg.png);
+  background: url(./../assets/test-bg.png);
   opacity: 0.7;
   top: 0;
   left: 0;
