--- a/personality-test/src/style/App.scss
+++ b/personality-test/src/style/App.scss
@@ -29,6 +29,14 @@ h1,h2,h3,h4,h5,h6{
     color:$secondary-font-color
 }
 
+a{
+    color:white;
+
+    &:hover{
+        color:white;
+    }
+}
+
 ul{
     list-style: none;
     margin:0;
@@ -45,7 +53,7 @@ ul{
 
 .ui.inverted.menu {
     background-size: contain;
-    background: url(./assets/bg.png);
+    background: url(./../assets/bg.png);
 }
 
 .ui.segment.pushable {
@@ -63,7 +71,7 @@ main {
     &::after {
         content: "";
         background-size: contain;
-        background: url(./assets/test-bg.png);
+        background: url(./../assets/test-bg.png);
         opacity: 0.7;
         top: 0;
         left: 0;
