Test Module,Results Module,Loading Component

--- a/personality-test/src/style/App.css
+++ b/personality-test/src/style/App.css
@@ -76,15 +76,35 @@ main::after {
   z-index: -1;
 }
 
+.centered {
+  margin: 0 auto;
+}
+
 section.intro {
   max-width: 600px;
-  margin: 0 auto;
 }
 section.intro h1 {
   margin-bottom: 10px;
 }
 section.intro ul {
   margin-bottom: 25px;
+}
+
+section.test .question {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+section.test .question-text {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+section.test .answers {
+  margin-bottom: 1.5rem;
+}
+section.test .answers .answer {
+  text-align: left;
+  margin-bottom: 0.5rem;
 }
 
 /*# sourceMappingURL=App.css.map */
