sorular,intro resmi,test akışı,rapor verisi

--- a/personality-test/src/style/App.scss
+++ b/personality-test/src/style/App.scss
@@ -1,10 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat|Roboto');
 
 $secondary-font-color:#e96132;
+$header-width:6rem;
 
 body {
-    padding-left: 85px;
-    width: calc(100%-85px);
+    padding-left: $header-width;
+    width: calc(100%-$header-width);
     // font-family: 'Roboto', sans-serif;
     font-weight: thin;
     font-size:12px;
@@ -14,7 +15,7 @@ header {
     position: fixed;
     left: 0;
     top: 0;
-    width: 85px;
+    width: $header-width;
     height: 100%;
     padding: 0;
     text-align: center;
@@ -38,7 +39,7 @@ a{
 }
 
 hr{
-    border:1px dashed orange;
+    border:0.11rem dashed orange;
     width:85%;
     margin:2rem auto;
 }
@@ -87,20 +88,27 @@ main {
 
 
 section.intro{
-    h1{
-        margin-bottom:10px;
-    }
-
     ul{
         list-style: none;
         margin:0;
         padding: 0;
-        margin-bottom:25px;
+        margin-bottom:2rem;
 
         li{
-            padding-bottom:5px;
+            padding-bottom:0.3rem;
         }
     }
+
+    h1.ui.header{
+        margin-top:0;
+    }
+    img{
+        margin:0 auto;
+    }
+}
+
+.test-container{
+    max-width:55rem;
 }
 
 section.test{
@@ -112,23 +120,47 @@ section.test{
 
     .question-text{
         font-size: 1.5rem;
+        line-height: 1.8rem;
         margin-bottom:1rem;
+        max-width:50rem;
+        min-height: 4rem;
+    }
+
+    .answers-container{
+        display: flex;
     }
 
     .answers{
         margin-bottom:1.5rem;
+        margin-left:0.5rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        vertical-align:center;
+        
         .answer{
             text-align: left;
             margin-bottom:0.5rem;
+            position: relative;
         }
     }
+
+    .mood-container{
+        width:10rem;
+        i.icon{
+            font-size: 1.6em;
+            margin-top:0.4rem;
+            transition: color 0.2s linear;
+        }
+    }
+    
 }
 
 .results-container{
     .pdf-btn{
         position: fixed;
-        top:10px;
-        right:10px;
+        top:1rem;
+        right:1rem;
         z-index: 99
     }
 }
