--- a/personality-test/src/style/App.scss
+++ b/personality-test/src/style/App.scss
@@ -3,12 +3,18 @@
 $secondary-font-color:#e96132;
 $header-width:6rem;
 
+#root,.App{
+    height:100%;
+}
+
 body {
     padding-left: $header-width;
-    width: calc(100%-$header-width);
+    width: 100%;
     // font-family: 'Roboto', sans-serif;
     font-weight: thin;
     font-size:12px;
+    font-variant-ligatures: no-common-ligatures;
+    -webkit-font-variant-ligatures: no-common-ligatures;
 }
 
 header {
@@ -44,35 +50,6 @@ hr{
     margin:2rem auto;
 }
 
-.ui.header{
-    color:$secondary-font-color;
-}
-
-.ui.inverted.menu {
-    background-size: contain;
-    background: url(./../assets/bg.png);
-}
-
-.ui.segment.pushable {
-    border: 0;
-    border-radius: 0;
-}
-
-main {
-    &::after {
-        content: "";
-        background-size: contain;
-        background: url(./../assets/test-bg.png);
-        opacity: 0.7;
-        top: 0;
-        left: 0;
-        bottom: 0;
-        right: 0;
-        position: absolute;
-        z-index: -1;
-    }
-}
-
 .centered{
     margin:0 auto;
     width:initial;
@@ -86,6 +63,49 @@ main {
     height: 100vh;
 }
 
+//general semantic ui resets
+.ui {
+    &.header {
+        color: $secondary-font-color;
+    }
+
+    &.inverted.menu {
+        background-size: contain;
+        background: url(./../assets/bg.png);
+    }
+
+    &.segment.pushable {
+        border: 0;
+        border-radius: 0;
+    }
+
+    &.active.progress .bar{
+        min-width: 3em;
+    }
+
+    &.statistic>.label, &.statistics .statistic>.label{
+        text-transform: none;
+    }
+}
+
+
+
+main {
+    height: 100%;
+    &::after {
+        content: "";
+        background-size: contain;
+        // background: url(./../assets/test-bg.png);
+        opacity: 0.7;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        position: absolute;
+        z-index: -1;
+        background-color:#eceae5;
+    }
+}
 
 section.intro{
     ul{
@@ -213,6 +233,50 @@ section.results{
             margin:0 0 1.5rem;
             font-size:1.5rem;
         }
+    }
+}
+
+section.customer-dashboard{
+    padding: 3rem 3rem 0 3rem;
+    background-color:#ffffff;
+    height:100%;
+    min-height: 100vh;
+
+    .ui.three.statistics{
+        max-width:1000px;
+        margin: 0 auto;
+    }
+    .ui.centered.grid>.column:not(.aligned):not(.justified):not(.row), .ui.centered.grid>.row>.column:not(.aligned):not(.justified), .ui.grid .centered.row>.column:not(.aligned):not(.justified){
+        text-align: center;
+    }
+
+    .ui.statistic>.label, .ui.statistics .statistic>.label{
+        font-size:1.2rem;
+        margin-top:0.5rem;
+    }
+
+    .row{
+        margin-bottom:2rem;
+    }
+
+    .recharts-tooltip-wrapper{
+        font-size:1.3rem;
+    }
+
+    .ui.table tfoot th{
+        text-align: center;
+    }
+
+    tr{
+        cursor: pointer;
+    }
+
+    .bar-graph-container{
+        width:100%;
+    }
+
+    .recharts-responsive-container{
+        flex-grow:1;
     }
 }
 
