Yönetici paneli - init

--- a/personality-test/src/style/App.scss
+++ b/personality-test/src/style/App.scss
@@ -7,7 +7,7 @@ $header-width:6rem;
     height:100%;
 }
 
-body,h1,h2,h3,h4,h5,h6,ul,li,p,figcaption,.button.ui,.ui.header,.ui.input>input,.ui.steps .step .title,.ui.menu{
+body,h1,h2,h3,h4,h5,h6,ul,li,p,figcaption,.button.ui,.ui.header,.ui.input>input,.ui.steps .step .title,.ui.menu,.ui.statistic>.label, .ui.statistics .statistic>.label{
     font-family: 'Roboto', sans-serif;
     -webkit-font-smoothing:antialiased;
     color: #333
