--- a/personality-test/src/style/App.css
+++ b/personality-test/src/style/App.css
@@ -1,12 +1,14 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900");
 #root, .App {
-  height: 100%; }
+  height: 100%;
+}
 
 body, h1, h2, h3, h4, h5, h6, ul, li, p, figcaption, .button.ui, .ui.header, .ui.input > input, .ui.steps .step .title, .ui.menu, .ui.statistic > .label, .ui.statistics .statistic > .label {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
-  color: #333; }
+  color: #333;
+}
 
 body {
   padding-left: 6rem;
@@ -14,7 +16,8 @@ body {
   font-weight: thin;
   font-size: 12px;
   font-variant-ligatures: no-common-ligatures;
-  -webkit-font-variant-ligatures: no-common-ligatures; }
+  -webkit-font-variant-ligatures: no-common-ligatures;
+}
 
 header {
   position: fixed;
@@ -26,208 +29,268 @@ header {
   text-align: center;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
-  color: #e96132; }
+  color: #e96132;
+}
 
 a {
-  color: white; }
-  a:hover {
-    color: white; }
+  color: white;
+}
+a:hover {
+  color: white;
+}
 
 hr {
   border: 0.11rem dashed orange;
   width: 85%;
-  margin: 2rem auto; }
+  margin: 2rem auto;
+}
 
 .centered {
   margin: 0 auto;
-  width: initial; }
+  width: initial;
+}
 
 .flex-center {
   display: flex;
   align-content: center;
   vertical-align: middle;
   align-items: center;
-  height: 100vh; }
+  height: 100vh;
+}
 
 .ui.header {
-  color: #e96132; }
-
+  color: #e96132;
+}
 .ui.inverted.menu {
   background-size: contain;
-  background: url(./../assets/bg.png); }
-
+  background: url(./../assets/bg.png);
+}
 .ui.segment.pushable {
   border: 0;
-  border-radius: 0; }
-
+  border-radius: 0;
+}
 .ui.active.progress .bar {
-  min-width: 3em; }
-
+  min-width: 3em;
+}
 .ui.statistic > .label, .ui.statistics .statistic > .label {
-  text-transform: none; }
+  text-transform: none;
+}
 
 main {
-  height: 100%; }
-  main::after {
-    content: "";
-    background-size: contain;
-    opacity: 0.7;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    position: absolute;
-    z-index: -1;
-    background-color: #eceae5; }
+  height: 100%;
+}
+main::after {
+  content: "";
+  background-size: contain;
+  opacity: 0.7;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;
+  background-color: #eceae5;
+}
 
 section.intro ul {
   list-style: none;
   margin: 0;
   padding: 0;
-  margin-bottom: 2rem; }
-  section.intro ul li {
-    padding-bottom: 0.3rem; }
-
+  margin-bottom: 2rem;
+}
+section.intro ul li {
+  padding-bottom: 0.3rem;
+}
 section.intro h1.ui.header {
-  margin-top: 0; }
-
+  margin-top: 0;
+}
 section.intro img {
-  margin: 0 auto; }
+  margin: 0 auto;
+}
 
 .test-container {
-  max-width: 55rem; }
+  max-width: 55rem;
+}
 
 section.test .question {
   display: flex;
   flex-direction: column;
-  align-items: center; }
-
+  align-items: center;
+}
 section.test .question-text {
   font-size: 1.5rem;
   line-height: 1.8rem;
   margin-bottom: 1rem;
   max-width: 50rem;
-  min-height: 4rem; }
-
+  min-height: 4rem;
+}
 section.test .answers-container {
-  display: flex; }
-
+  display: flex;
+}
 section.test .answers {
   margin-bottom: 1.5rem;
   margin-left: 0.5rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-  vertical-align: center; }
-  section.test .answers .answer {
-    text-align: left;
-    margin-bottom: 0.5rem;
-    position: relative; }
-
+  vertical-align: center;
+}
+section.test .answers .answer {
+  text-align: left;
+  margin-bottom: 0.5rem;
+  position: relative;
+}
 section.test .mood-container {
-  width: 10rem; }
-  section.test .mood-container i.icon {
-    font-size: 1.6em;
-    margin-top: 0.4rem;
-    transition: color 0.2s linear; }
+  width: 10rem;
+}
+section.test .mood-container i.icon {
+  font-size: 1.6em;
+  margin-top: 0.4rem;
+  transition: color 0.2s linear;
+}
 
 .results-container .pdf-btn {
   position: fixed;
   top: 1rem;
   right: 1rem;
-  z-index: 99; }
+  z-index: 99;
+}
 
 section.results {
-  margin-top: 1rem; }
-  section.results .paragraph {
-    padding: 2rem 6rem 5rem 6rem; }
-  section.results .ui.horizontal.segments.segment-group {
-    margin-bottom: 4rem; }
-  section.results figure {
-    text-align: center; }
-  section.results blockquote {
-    font-size: 2rem;
-    margin: 6rem 0 1rem;
-    quotes: "“" "”" "‘" "’"; }
-    section.results blockquote::before {
-      content: open-quote;
-      text-align: left; }
-    section.results blockquote::after {
-      content: close-quote;
-      text-align: right; }
-    section.results blockquote p {
-      display: inline; }
-  section.results figcaption {
-    font-size: 1.7rem;
-    text-align: center; }
-  section.results ol.ui.list li:before {
-    color: #e96132; }
-  section.results .paragraph.sentences blockquote {
-    margin: 0 0 1.5rem;
-    font-size: 1.5rem; }
+  margin-top: 1rem;
+}
+section.results .paragraph {
+  padding: 2rem 6rem 5rem 6rem;
+}
+section.results .ui.horizontal.segments.segment-group {
+  margin-bottom: 4rem;
+}
+section.results figure {
+  text-align: center;
+}
+section.results blockquote {
+  font-size: 2rem;
+  margin: 6rem 0 1rem;
+  quotes: "“" "”" "‘" "’";
+}
+section.results blockquote::before {
+  content: open-quote;
+  text-align: left;
+}
+section.results blockquote::after {
+  content: close-quote;
+  text-align: right;
+}
+section.results blockquote p {
+  display: inline;
+}
+section.results figcaption {
+  font-size: 1.7rem;
+  text-align: center;
+}
+section.results ol.ui.list li:before {
+  color: #e96132;
+}
+section.results .paragraph.sentences blockquote {
+  margin: 0 0 1.5rem;
+  font-size: 1.5rem;
+}
 
-section.customer-dashboard {
+.dashboard {
   padding: 3rem 3rem 0 3rem;
   background-color: #ffffff;
   height: 100%;
-  min-height: 100vh; }
-  section.customer-dashboard .ui.three.statistics {
-    max-width: 1000px;
-    margin: 0 auto; }
-  section.customer-dashboard .ui.centered.grid > .column:not(.aligned):not(.justified):not(.row), section.customer-dashboard .ui.centered.grid > .row > .column:not(.aligned):not(.justified), section.customer-dashboard .ui.grid .centered.row > .column:not(.aligned):not(.justified) {
-    text-align: center; }
-  section.customer-dashboard .ui.statistic > .label, section.customer-dashboard .ui.statistics .statistic > .label {
-    font-size: 1.2rem;
-    margin-top: 0.5rem; }
-  section.customer-dashboard .row {
-    margin-bottom: 2rem; }
-  section.customer-dashboard .recharts-tooltip-wrapper {
-    font-size: 1.3rem; }
-  section.customer-dashboard .ui.table tfoot th {
-    text-align: center; }
-  section.customer-dashboard tr {
-    cursor: pointer; }
-  section.customer-dashboard .bar-graph-container {
-    width: 100%; }
-  section.customer-dashboard .recharts-responsive-container {
-    flex-grow: 1; }
-  section.customer-dashboard .ui.sortable.table thead th.no-hover:hover {
-    background: #f9fafb;
-    cursor: initial; }
-  section.customer-dashboard td .ui.button:not(.icon) > .icon:not(.button):not(.dropdown) {
-    margin: 0;
-    font-size: 1.3em; }
-  section.customer-dashboard td .ui.tiny.button, section.customer-dashboard .ui.tiny.buttons .button, section.customer-dashboard .ui.tiny.buttons .or {
-    padding: .58928571em 0.725em .58928571em; }
+  min-height: 100vh;
+}
+.dashboard .dashboard-center {
+  max-width: 1000px;
+  margin: 0 auto;
+}
+.dashboard .ui.centered.grid > .column:not(.aligned):not(.justified):not(.row), .dashboard .ui.centered.grid > .row > .column:not(.aligned):not(.justified), .dashboard .ui.grid .centered.row > .column:not(.aligned):not(.justified) {
+  text-align: center;
+}
+.dashboard .ui.statistic > .label, .dashboard .ui.statistics .statistic > .label {
+  font-size: 1.2rem;
+  margin-top: 0.5rem;
+}
+.dashboard .row {
+  margin-bottom: 2rem;
+}
+.dashboard .recharts-tooltip-wrapper {
+  font-size: 1.3rem;
+}
+.dashboard .ui.table tfoot th {
+  text-align: center;
+}
+.dashboard tr {
+  cursor: pointer;
+}
+.dashboard .ui.sortable.table thead th.no-hover:hover {
+  background: #f9fafb;
+  cursor: initial;
+}
+.dashboard td .ui.button:not(.icon) > .icon:not(.button):not(.dropdown) {
+  margin: 0;
+  font-size: 1.3em;
+}
+.dashboard td .ui.tiny.button, .dashboard .ui.tiny.buttons .button, .dashboard .ui.tiny.buttons .or {
+  padding: 0.58928571em 0.725em 0.58928571em;
+}
+
+section.customer-dashboard .personnel-graph {
+  width: 100%;
+}
 
 .send-test {
-  width: 100%; }
-  .send-test div.segment {
-    width: 100%;
-    margin: 0 1rem; }
-  .send-test .ui.steps .step:first-child.active {
-    border-bottom: solid 2px #fbbd08; }
-  .send-test .ui.steps .step:nth-child(2).active {
-    border-bottom: solid 2px #b5cc18; }
-  .send-test .ui.steps .step:nth-child(3).active {
-    border-bottom: solid 2px #21ba45; }
-  .send-test .step-1 .ui.input > input {
-    margin-right: 10px; }
-  .send-test .step-2 .ui.button {
-    min-width: 13rem;
-    margin: 0.3rem 0 0 0; }
-  .send-test .step-2 .ui.input {
-    margin: 1.4rem 0 0 0;
-    width: 100%; }
-  .send-test .ui.steps {
-    width: 100%; }
+  width: 100%;
+}
+.send-test div.segment {
+  width: 100%;
+  margin: 0 1rem;
+}
+.send-test .ui.steps .step:first-child.active {
+  border-bottom: solid 2px #fbbd08;
+}
+.send-test .ui.steps .step:nth-child(2).active {
+  border-bottom: solid 2px #b5cc18;
+}
+.send-test .ui.steps .step:nth-child(3).active {
+  border-bottom: solid 2px #21ba45;
+}
+.send-test .step-1 .ui.input > input {
+  margin-right: 10px;
+}
+.send-test .step-2 .ui.button {
+  min-width: 13rem;
+  margin: 0.3rem 0 0 0;
+}
+.send-test .step-2 .ui.input {
+  margin: 1.4rem 0 0 0;
+  width: 100%;
+}
+.send-test .ui.steps {
+  width: 100%;
+}
 
 .ask-credit {
-  width: 100%; }
-  .ask-credit .input {
-    width: 100%;
-    margin: 0.3rem 0; }
+  width: 100%;
+}
+.ask-credit .input {
+  width: 100%;
+  margin: 0.3rem 0;
+}
+
+section.admin-dashboard .admin-menu {
+  margin: 2rem 0 3rem;
+}
+
+.request-modal p {
+  color: #fff;
+}
+
+/*# sourceMappingURL=App.css.map */
