--- a/personality-test/src/style/App.scss
+++ b/personality-test/src/style/App.scss
@@ -93,8 +93,6 @@ hr{
     }
 }
 
-
-
 main {
     height: 100%;
     &::after {
@@ -241,13 +239,13 @@ section.results{
     }
 }
 
-section.customer-dashboard{
+.dashboard{
     padding: 3rem 3rem 0 3rem;
     background-color:#ffffff;
     height:100%;
     min-height: 100vh;
 
-    .ui.three.statistics{
+    .dashboard-center{
         max-width:1000px;
         margin: 0 auto;
     }
@@ -277,15 +275,7 @@ section.customer-dashboard{
         cursor: pointer;
     }
 
-    .bar-graph-container{
-        width:100%;
-    }
-
-    .recharts-responsive-container{
-        flex-grow:1;
-    }
-
-    .ui.sortable.table thead th.no-hover:hover{
+        .ui.sortable.table thead th.no-hover:hover{
         background: #f9fafb;
         cursor:initial;
     }
@@ -298,10 +288,15 @@ section.customer-dashboard{
     td .ui.tiny.button, .ui.tiny.buttons .button, .ui.tiny.buttons .or{
         padding:.58928571em 0.725em .58928571em;
     }
-
-
 }
 
+section.customer-dashboard{
+    .personnel-graph{
+        width:100%;
+    }
+}
+
+//customer modals
 .send-test {
     width:100%;
 
@@ -349,6 +344,19 @@ section.customer-dashboard{
     .input{
         width:100%;
         margin:0.3rem 0;
+    }
+}
+
+section.admin-dashboard{
+    .admin-menu{
+        margin:2rem 0 3rem;
+    }
+}
+
+//admin modals
+.request-modal{
+    p{
+        color:#fff;
     }
 }
 
