--- a/personality-test/src/style/App.scss
+++ b/personality-test/src/style/App.scss
@@ -150,7 +150,7 @@ section.test{
         margin-left:0.5rem;
         display: flex;
         flex-direction: column;
-        align-items: center;
+        align-items: left;
         vertical-align:center;
         
         .answer{
