Authorization-client side,loading screen,referrer URL,login screen

--- a/frontend/src/style/App.css
+++ b/frontend/src/style/App.css
@@ -311,4 +311,8 @@ section.admin-dashboard .question-editor textarea {
   color: #fff;
 }
 
+section.login {
+  height: 100vh;
+}
+
 /*# sourceMappingURL=App.css.map */
