--- a/frontend/src/style/App.css
+++ b/frontend/src/style/App.css
@@ -1,342 +1,275 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900");
 #root, .App {
-  height: 100%;
-}
+  height: 100%; }
 
 body, h1, h2, h3, h4, h5, h6, ul, li, p, figcaption, .button.ui, .ui.header, .ui.input > input, .ui.steps .step .title, .ui.menu, .ui.statistic > .label, .ui.statistics .statistic > .label {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
-  color: #333;
-}
+  color: #333; }
 
 body {
   width: 100%;
   font-weight: thin;
   font-size: 12px;
   font-variant-ligatures: no-common-ligatures;
-  -webkit-font-variant-ligatures: no-common-ligatures;
-}
+  -webkit-font-variant-ligatures: no-common-ligatures; }
 
 h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
-  color: #e96132;
-}
+  color: #e96132; }
 
 a {
-  color: white;
-}
-a:hover {
-  color: white;
-}
+  color: white; }
+  a:hover {
+    color: white; }
 
 hr {
   border: 0.11rem dashed orange;
   width: 85%;
-  margin: 2rem auto;
-}
+  margin: 2rem auto; }
 
 .centered {
   margin: 0 auto;
-  width: initial;
-}
+  width: initial; }
 
 .flex-center {
   display: flex;
   align-content: center;
   vertical-align: middle;
   align-items: center;
-  height: 100vh;
-}
+  height: 100vh; }
 
 .ui.header {
-  color: #e96132;
-}
+  color: #e96132; }
+
 .ui.inverted.menu {
   background-size: contain;
-  background: url(./../assets/bg.png);
-}
+  background: url(./../assets/bg.png); }
+
 .ui.segment.pushable {
   border: 0;
-  border-radius: 0;
-}
+  border-radius: 0; }
+
 .ui.active.progress .bar {
-  min-width: 3em;
-}
+  min-width: 3em; }
+
 .ui.statistic > .label, .ui.statistics .statistic > .label {
-  text-transform: none;
-}
+  text-transform: none; }
 
 .ui.dimmer {
-  background-color: rgba(0, 0, 0, 0.35);
-}
+  background-color: rgba(0, 0, 0, 0.35); }
 
 main {
-  min-height: 100%;
-}
+  min-height: 100%; }
 
 section.intro {
   width: 100%;
-  background-color: #eceae5;
-}
-section.intro ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  margin-bottom: 2rem;
-}
-section.intro ul li {
-  padding-bottom: 0.3rem;
-}
-section.intro h1.ui.header {
-  margin-top: 0;
-}
-section.intro img {
-  margin: 0 auto;
-}
+  background-color: #eceae5; }
+  section.intro ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    margin-bottom: 2rem; }
+    section.intro ul li {
+      padding-bottom: 0.3rem; }
+  section.intro h1.ui.header {
+    margin-top: 0; }
+  section.intro img {
+    margin: 0 auto; }
 
 .test-container {
-  max-width: 55rem;
-}
+  max-width: 55rem; }
 
 section.test {
-  background-color: #eceae5;
-}
-section.test .question {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-section.test .question-text {
-  font-size: 1.5rem;
-  line-height: 1.8rem;
-  margin-bottom: 1rem;
-  max-width: 50rem;
-  min-height: 4rem;
-}
-section.test .answers-container {
-  display: flex;
-  justify-content: center;
-}
-section.test .answers {
-  margin-bottom: 1.5rem;
-  margin-left: 0.5rem;
-  display: flex;
-  flex-direction: column;
-  align-items: left;
-  vertical-align: center;
-}
-section.test .answers .answer {
-  text-align: left;
-  margin-bottom: 0.5rem;
-  position: relative;
-}
-section.test .mood-container {
-  width: 10rem;
-}
-section.test .mood-container i.icon {
-  font-size: 1.6em;
-  margin-top: 0.4rem;
-  transition: color 0.2s linear;
-}
+  background-color: #eceae5; }
+  section.test .question {
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+  section.test .question-text {
+    font-size: 1.5rem;
+    line-height: 1.8rem;
+    margin-bottom: 1rem;
+    max-width: 50rem;
+    min-height: 4rem; }
+  section.test .answers-container {
+    display: flex;
+    justify-content: center; }
+  section.test .answers {
+    margin-bottom: 1.5rem;
+    margin-left: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    vertical-align: center; }
+    section.test .answers .answer {
+      text-align: left;
+      margin-bottom: 0.5rem;
+      position: relative; }
+  section.test .mood-container {
+    width: 10rem; }
+    section.test .mood-container i.icon {
+      font-size: 1.6em;
+      margin-top: 0.4rem;
+      transition: color 0.2s linear; }
 
 .results-container {
-  background-color: #eceae5;
-}
-.results-container .pdf-btn {
-  position: fixed;
-  top: 1rem;
-  right: 1rem;
-  z-index: 99;
-}
+  background-color: #eceae5; }
+  .results-container .pdf-btn {
+    position: fixed;
+    top: 1rem;
+    right: 1rem;
+    z-index: 99; }
 
 section.results {
-  padding: 5rem 0 15rem;
-}
-section.results .page {
-  padding-top: 3rem;
-}
-section.results .paragraph {
-  padding: 2rem 6rem 5rem 6rem;
-}
-section.results .ui.horizontal.segments.segment-group {
-  margin-bottom: 4rem;
-}
-section.results figure {
-  text-align: center;
-}
-section.results blockquote {
-  font-size: 2rem;
-  margin: 6rem 0 1rem;
-  quotes: "“" "”" "‘" "’";
-}
-section.results blockquote::before {
-  content: open-quote;
-  text-align: left;
-}
-section.results blockquote::after {
-  content: close-quote;
-  text-align: right;
-}
-section.results blockquote p {
-  display: inline;
-}
-section.results figcaption {
-  font-size: 1.7rem;
-  text-align: center;
-}
-section.results ol.ui.list li:before {
-  color: #e96132;
-}
-section.results .paragraph.sentences blockquote {
-  margin: 0 0 1.5rem;
-  font-size: 1.5rem;
-}
+  padding: 5rem 0 15rem; }
+  section.results .page {
+    padding-top: 3rem; }
+  section.results .paragraph {
+    padding: 2rem 6rem 5rem 6rem; }
+  section.results .ui.horizontal.segments.segment-group {
+    margin-bottom: 4rem; }
+  section.results figure {
+    text-align: center; }
+  section.results blockquote {
+    font-size: 2rem;
+    margin: 6rem 0 1rem;
+    quotes: "“" "”" "‘" "’"; }
+    section.results blockquote::before {
+      content: open-quote;
+      text-align: left; }
+    section.results blockquote::after {
+      content: close-quote;
+      text-align: right; }
+    section.results blockquote p {
+      display: inline; }
+  section.results figcaption {
+    font-size: 1.7rem;
+    text-align: center; }
+  section.results ol.ui.list li:before {
+    color: #e96132; }
+  section.results .paragraph.sentences blockquote {
+    margin: 0 0 1.5rem;
+    font-size: 1.5rem; }
 
 .dashboard {
   padding: 3rem 3rem 0 3rem;
   background-color: rgba(236, 234, 229, 0.2);
   height: 100%;
-  min-height: 100vh;
-}
-.dashboard .dashboard-center {
-  max-width: 1000px;
-  margin: 0 auto;
-}
-.dashboard .ui.centered.grid > .column:not(.aligned):not(.justified):not(.row), .dashboard .ui.centered.grid > .row > .column:not(.aligned):not(.justified), .dashboard .ui.grid .centered.row > .column:not(.aligned):not(.justified) {
-  text-align: center;
-}
-.dashboard .ui.statistic > .label, .dashboard .ui.statistics .statistic > .label {
-  font-size: 1.2rem;
-  margin-top: 0.5rem;
-}
-.dashboard .row {
-  margin-bottom: 2rem;
-}
-.dashboard .recharts-tooltip-wrapper {
-  font-size: 1.3rem;
-}
-.dashboard .ui.table tfoot th {
-  text-align: center;
-}
-.dashboard tr {
-  cursor: pointer;
-}
-.dashboard .ui.sortable.table thead th.no-hover:hover {
-  background: #f9fafb;
-  cursor: initial;
-}
-.dashboard td .ui.button:not(.icon) > .icon:not(.button):not(.dropdown) {
-  margin: 0;
-  font-size: 1.3em;
-}
-.dashboard td .ui.tiny.button, .dashboard .ui.tiny.buttons .button, .dashboard .ui.tiny.buttons .or {
-  padding: 0.58928571em 0.725em 0.58928571em;
-}
+  min-height: 100vh; }
+  .dashboard .dashboard-center {
+    max-width: 1000px;
+    margin: 0 auto; }
+  .dashboard .ui.centered.grid > .column:not(.aligned):not(.justified):not(.row), .dashboard .ui.centered.grid > .row > .column:not(.aligned):not(.justified), .dashboard .ui.grid .centered.row > .column:not(.aligned):not(.justified) {
+    text-align: center; }
+  .dashboard .ui.statistic > .label, .dashboard .ui.statistics .statistic > .label {
+    font-size: 1.2rem;
+    margin-top: 0.5rem; }
+  .dashboard .row {
+    margin-bottom: 2rem; }
+  .dashboard .recharts-tooltip-wrapper {
+    font-size: 1.3rem; }
+  .dashboard .ui.table tfoot th {
+    text-align: center; }
+  .dashboard tr {
+    cursor: pointer; }
+  .dashboard .ui.sortable.table thead th.no-hover:hover {
+    background: #f9fafb;
+    cursor: initial; }
+  .dashboard td .ui.button:not(.icon) > .icon:not(.button):not(.dropdown) {
+    margin: 0;
+    font-size: 1.3em; }
+  .dashboard td .ui.tiny.button, .dashboard .ui.tiny.buttons .button, .dashboard .ui.tiny.buttons .or {
+    padding: .58928571em 0.725em .58928571em; }
 
 section.customer-dashboard .personnel-graph {
-  width: 100%;
-}
+  width: 100%; }
 
 .send-test {
-  width: 100%;
-}
-.send-test div.segment {
-  width: 100%;
-  margin: 0 1rem;
-}
-.send-test .ui.steps .step:first-child.active {
-  border-bottom: solid 2px #fbbd08;
-}
-.send-test .ui.steps .step:nth-child(2).active {
-  border-bottom: solid 2px #b5cc18;
-}
-.send-test .ui.steps .step:nth-child(3).active {
-  border-bottom: solid 2px #21ba45;
-}
-.send-test .step-1 .inputs {
-  display: flex;
-  flex-direction: column;
-}
-.send-test .step-1 .inputs div {
-  margin: 0.3rem 0;
-}
-.send-test .step-2 {
-  display: flex;
-  flex-direction: column;
-}
-.send-test .step-2 .row {
-  margin: 0.5rem 0;
-}
-.send-test .step-2 button {
-  margin: 1rem 0 0 0;
-}
-.send-test .step-2 .ribbon {
-  margin: 1rem 0 1rem;
-  font-size: 1.2rem;
-}
-.send-test .step-3 .column {
-  display: flex;
-  flex-direction: column;
-}
-.send-test .ui.steps {
-  width: 100%;
-}
+  width: 100%; }
+  .send-test div.segment {
+    width: 100%;
+    margin: 0 1rem; }
+  .send-test .ui.steps .step:first-child.active {
+    border-bottom: solid 2px #fbbd08; }
+  .send-test .ui.steps .step:nth-child(2).active {
+    border-bottom: solid 2px #b5cc18; }
+  .send-test .ui.steps .step:nth-child(3).active {
+    border-bottom: solid 2px #21ba45; }
+  .send-test .step-1 .inputs {
+    display: flex;
+    flex-direction: column; }
+    .send-test .step-1 .inputs div {
+      margin: 0.3rem 0; }
+  .send-test .step-2 {
+    display: flex;
+    flex-direction: column; }
+    .send-test .step-2 .row {
+      margin: 0.5rem 0; }
+    .send-test .step-2 button {
+      margin: 1rem 0 0 0; }
+    .send-test .step-2 .ribbon {
+      margin: 1rem 0 1rem;
+      font-size: 1.2rem; }
+  .send-test .step-3 .column {
+    display: flex;
+    flex-direction: column; }
+  .send-test .ui.steps {
+    width: 100%; }
 
 .ask-credit {
-  width: 100%;
-}
-.ask-credit .input {
-  width: 100%;
-  margin: 0.3rem 0;
-}
+  width: 100%; }
+  .ask-credit .input {
+    width: 100%;
+    margin: 0.3rem 0; }
 
 section.admin-dashboard .statistics {
   min-height: 10rem;
   display: flex;
-  align-items: center;
-}
+  align-items: center; }
+
 section.admin-dashboard .admin-menu {
-  margin: 2rem 0 3rem;
-}
+  margin: 2rem 0 3rem; }
+
 section.admin-dashboard .question-selector .ui.button {
   width: 30px;
   height: 30px;
   line-height: 32px;
   padding: 0;
   margin: 0 0.1rem 0.2rem 0.1rem;
-  border-radius: 0.7rem;
-}
-section.admin-dashboard .question-selector .ui.button:hover {
-  color: #d1d1d1;
-}
-section.admin-dashboard .question-selector .ui.button.selected-question {
-  background-color: #333;
-}
+  border-radius: 0.7rem; }
+  section.admin-dashboard .question-selector .ui.button:hover {
+    color: #d1d1d1; }
+  section.admin-dashboard .question-selector .ui.button.selected-question {
+    background-color: #333; }
+
 section.admin-dashboard .question-editor textarea {
-  min-height: 80px;
-}
+  min-height: 80px; }
 
 .request-modal p {
-  color: #fff;
-}
+  color: #fff; }
 
 .add-company .ui.input {
   width: 100%;
-  margin: 0.3rem 0 0.3rem;
-}
+  margin: .3rem 0 .3rem; }
+
 .add-company .ui.inverted.green.button {
-  margin-top: 1rem;
-}
+  margin-top: 1rem; }
+
 .add-company .required input {
-  border-color: orange;
-}
+  border-color: orange; }
 
 section.login {
-  height: 100vh;
-}
-section.login button.ui {
-  line-height: 25px;
-}
+  height: 100vh; }
+  section.login button.ui {
+    line-height: 25px; }
 
-/*# sourceMappingURL=App.css.map */
+.user-menu {
+  position: fixed;
+  top: 1rem;
+  right: 1rem; }
+  .user-menu i.inverted.circular.purple.icon {
+    transition: background-color 0.2s linear; }
+  .user-menu i.inverted.circular.purple.icon:hover {
+    background-color: black !important; }
