New toast manager, input zoom fix,  some design refactoring

--- a/frontend/src/style/App.css
+++ b/frontend/src/style/App.css
@@ -22,7 +22,8 @@ figcaption,
 .ui.steps .step .title,
 .ui.menu,
 .ui.statistic > .label,
-.ui.statistics .statistic > .label {
+.ui.statistics .statistic > .label,
+.ui.modal > .header {
   font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
   color: #333;
@@ -34,6 +35,11 @@ body {
   font-size: 12px;
   font-variant-ligatures: no-common-ligatures;
   -webkit-font-variant-ligatures: no-common-ligatures;
+}
+@media only screen and (max-width: 776px) {
+  body input, body textarea {
+    font-size: 16px !important;
+  }
 }
 
 h1,
@@ -165,14 +171,6 @@ section.test .answers .answer {
   margin-bottom: 0.5rem;
   position: relative;
 }
-section.test .mood-container {
-  width: 10rem;
-}
-section.test .mood-container i.icon {
-  font-size: 1.6em;
-  margin-top: 0.4rem;
-  transition: color 0.2s linear;
-}
 
 .results-container {
   background-color: #eceae5;
@@ -273,12 +271,21 @@ section.results .paragraph.sentences blockquote {
   padding: 0.58928571em 0.725em 0.58928571em;
 }
 
+section.customer-dashboard .customer-table thead button {
+  width: 100%;
+}
+section.customer-dashboard .customer-table thead .ui.input {
+  width: 100%;
+}
+section.customer-dashboard .ui.celled.table tr th {
+  border: none;
+}
 section.customer-dashboard .personnel-graph {
   width: 100%;
 }
 @media only screen and (max-width: 776px) {
   section.customer-dashboard {
-    padding: 3rem 0rem 3rem 0rem;
+    padding: 3rem 0rem 0rem 0rem;
   }
   section.customer-dashboard .statistics {
     max-width: 100vw;
@@ -289,8 +296,8 @@ section.customer-dashboard .personnel-graph {
     margin-top: 1rem !important;
     box-shadow: none !important;
   }
-  section.customer-dashboard .statistics .ui.teal {
-    margin-top: 0.5rem;
+  section.customer-dashboard .customer-table .ui.input {
+    margin-bottom: 0.5rem;
   }
 }
 
@@ -358,6 +365,15 @@ section.customer-dashboard .personnel-graph {
   }
 }
 
+section.admin-dashboard .ui.celled.table tr th {
+  border: none;
+}
+section.admin-dashboard .request-table thead .ui.input {
+  width: 100%;
+}
+section.admin-dashboard .request-table thead button {
+  width: 100%;
+}
 section.admin-dashboard .statistics {
   min-height: 10rem;
   display: flex;
@@ -422,6 +438,9 @@ section.admin-dashboard .request-table button {
 .add-company.ui.modal .required input {
   border-color: orange;
 }
+.add-company.ui.modal .ui.secondary.segment {
+  width: 100%;
+}
 @media only screen and (max-width: 776px) {
   .add-company.ui.modal {
     border-radius: 0 !important;
@@ -459,7 +478,8 @@ section.admin-dashboard .request-table button {
   }
 }
 section.login {
-  height: 100vh;
+  height: 80vh;
+  max-height: 80vh;
 }
 section.login button.ui {
   line-height: 25px;
@@ -486,6 +506,39 @@ section.login button.ui {
 }
 .user-menu i.inverted.circular.purple.icon:hover {
   background-color: black !important;
+}
+
+@keyframes toastIn {
+  from {
+    opacity: 0;
+    transform: translateY(-30px);
+  }
+  50% {
+    opacity: 1;
+  }
+}
+.toastIn {
+  animation-name: toastIn;
+}
+
+@keyframes toastOut {
+  from {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+    transform: scale3d(0.3, 0.3, 0.3);
+  }
+  to {
+    opacity: 0;
+  }
+}
+.toastOut {
+  animation-name: toastOut;
+}
+
+select {
+  font-size: 50px;
 }
 
 /*# sourceMappingURL=App.css.map */
