--- a/frontend/src/style/App.scss
+++ b/frontend/src/style/App.scss
@@ -28,7 +28,8 @@ figcaption,
 .ui.steps .step .title,
 .ui.menu,
 .ui.statistic>.label,
-.ui.statistics .statistic>.label {
+.ui.statistics .statistic>.label,
+.ui.modal>.header {
     font-family: 'Roboto', sans-serif;
     -webkit-font-smoothing: antialiased;
     color: #333
@@ -41,6 +42,11 @@ body {
     font-size: 12px;
     font-variant-ligatures: no-common-ligatures;
     -webkit-font-variant-ligatures: no-common-ligatures;
+    @media only screen and (max-width: 776px) {
+        input,textarea{
+            font-size: 16px!important;
+        }
+    }        
 }
 
 // header {
@@ -209,17 +215,6 @@ section.test {
             position: relative;
         }
     }
-
-    .mood-container {
-        width: 10rem;
-
-        i.icon {
-            font-size: 1.6em;
-            margin-top: 0.4rem;
-            transition: color 0.2s linear;
-        }
-    }
-
 }
 
 //results screen after the test
@@ -351,12 +346,26 @@ section.results {
 
 //customer panel
 section.customer-dashboard {
+    .customer-table{
+        thead{
+            button{
+                width:100%;
+            }
+
+            .ui.input{
+                width:100%;
+            }
+        }
+    }
+    .ui.celled.table tr th{
+        border:none;
+    }
     .personnel-graph {
         width: 100%;
     }
 
     @media only screen and (max-width: 776px) {
-        padding: 3rem 0rem 3rem 0rem;
+        padding: 3rem 0rem 0rem 0rem;
 
         .statistics{
             max-width: 100vw;
@@ -366,9 +375,10 @@ section.customer-dashboard {
                 margin-top:1rem!important;
                 box-shadow:none!important;
             }
-            .ui.teal
-            {
-                margin-top:0.5rem;
+        }
+        .customer-table{
+            .ui.input{
+                margin-bottom:.5rem;
             }
         }
     }
@@ -455,6 +465,20 @@ section.customer-dashboard {
 
 //admin panel
 section.admin-dashboard {
+    .ui.celled.table tr th{
+        border:none;
+    }
+    
+    .request-table thead{
+        .ui.input{
+            width:100%;
+        }
+
+        button{
+            width:100%;
+        }
+    }
+
     .statistics {
         min-height: 10rem;
         display: flex;
@@ -543,7 +567,11 @@ section.admin-dashboard {
     .required input {
         border-color: orange;
     }
-
+    .ui.secondary.segment
+    {
+        width:100%;    
+    }
+    
     @media only screen and (max-width: 776px) {
         border-radius: 0 !important;
         box-shadow: none !important;
@@ -589,8 +617,8 @@ section.admin-dashboard {
 
 //login screen
 section.login {
-    height: 100vh;
-
+    height: 80vh;
+    max-height: 80vh;
     button.ui {
         line-height: 25px;
     }
@@ -621,4 +649,48 @@ section.login {
     i.inverted.circular.purple.icon:hover {
         background-color: black !important;
     }
+}
+
+
+
+//toast animations
+
+
+
+@keyframes toastIn {
+  from {
+    opacity: 0;
+    transform: translateY(-30px);
+  }
+
+  50% {
+    opacity: 1;
+  }
+}
+
+.toastIn {
+  animation-name: toastIn;
+}
+
+@keyframes toastOut {
+  from {
+    opacity: 1;
+  }
+
+  50% {
+    opacity: 0;
+    transform: scale3d(.3, .3, .3);
+  }
+
+  to {
+    opacity: 0;
+  }
+}
+
+.toastOut {
+  animation-name: toastOut;
+}
+
+select{
+font-size: 50px;
 }
