--- a/frontend/src/style/App.scss
+++ b/frontend/src/style/App.scss
@@ -140,6 +140,10 @@ hr {
     background-color: rgba(0, 0, 0, .55)
 }
 
+.button-loading{
+    line-height: 1rem;
+}
+
 main {
     min-height: 100%;
 }
